sidebar: added temporary picture and fixed spacing again

--- a/src/index.css
+++ b/src/index.css
@@ -320,7 +320,7 @@ aside.sidebar {
 
 aside.sidebar #back-arrow {
   left: -48px;
-  top: -40px;
+  top: 52px;
   padding: 24px;
   width: 100px;
   background: white;
